--- a/Cyber Pet/style.css
+++ b/Cyber Pet/style.css
@@ -1,9 +1,5 @@
-* {
-    margin: 0;
-    border: 0;
-}
 html{
-    /* background-color: #c9fdfd; */
+    background-color: #c9fdfd;
 }
 #headbox{
     width: 100vw;
@@ -32,16 +28,35 @@ html{
     padding-left: 50px;
     padding-top: 10px;
 }
-
+#petimgg,
+#petimg{
+    width: 400px;
+    height: auto;
+}
 
 input {
-    border: 1px black ridge
+    border: 1px black ridge;
+    height: 20px;
+    font-family: 'Courier New', Courier, monospace;
 }
 input:focus {
     outline: none;
 }
-
 #commandbox {
     width: 100vw;
+    text-align: center;
 
+}
+button {
+    margin-left: 15px;
+    font-size: 200%;
+}
+#mood{
+margin-left: 33px;
+}
+#thirst{
+    margin-left: 20px;
+}
+#health {
+    margin-left: 13px;
 }
